--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,42 @@
 version: '3'
 services:
+  app:
+   build: .
+   links:
+     - mysql
+     #- postgres
+   hostname: local.typo3.org
+   ports:
+     - "80:80"
+     - "18443:443"
+     - "10022:22"
+   volumes:
+     - ./app/:/app/:delegated
+     - ./:/docker/:cached
+   # cap and privileged needed for slowlog
+   cap_add:
+     - SYS_PTRACE
+   privileged: true
+   env_file:
+     - etc/environment.yml
+     - etc/environment.development.yml
+   environment:
+     - VIRTUAL_HOST=local.typo3.org
+     - VIRTUAL_PORT=80
+     - POSTFIX_RELAYHOST=[mail]:1025
+  mysql:
+   build: mysql/
+   ports:
+     - 13306:3306
+   volumes:
+     - mysql:/var/lib/mysql
+   env_file:
+     - etc/environment.yml
+     - etc/environment.development.yml
   testsamlidp_idp:
-    build: .
+    build: saml-fake-idp/
     environment:
-      SIMPLESAMLPHP_SP_ENTITY_ID: http://app.example.com
+      SIMPLESAMLPHP_SP_ENTITY_ID: http://local.typo3.org
       SIMPLESAMLPHP_SP_ASSERTION_CONSUMER_SERVICE: http://localhost/simplesaml/module.php/saml/sp/saml2-acs.php/test-sp
       SIMPLESAMLPHP_SP_SINGLE_LOGOUT_SERVICE: http://localhost/simplesaml/module.php/saml/sp/saml2-logout.php/test-sp
       SIMPLESAMLPHP_ADMIN_PASSWORD: test
@@ -13,3 +46,5 @@ services:
     - "8443:8443"
     #volumes:
     #- /users.php:/var/www/simplesamlphp/config/simplesamlphp/authsources.php
+volumes:
+  mysql:
